added test proj, httpdataclient

--- a/src/SportEvents.csproj
+++ b/src/SportEvents.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
     <UserSecretsId>155b9e7c-bd1d-4b8f-94e9-1151bb3449b2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
