--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,26 @@
 **/.classpath
 **/.dockerignore
 **/.env
-*/.git
-*/.gitignore
+**/.git
+**/.gitignore
 **/.project
 **/.settings
 **/.toolstarget
-/.vs
-/.vscode
-/*.*proj.user
+**/.vs
+**/.vscode
+**/*.*proj.user
 **/*.dbmdl
 **/*.jfm
 **/azds.yaml
-*/bin
+**/bin
 **/charts
 **/docker-compose*
 **/Dockerfile*
 **/node_modules
 **/npm-debug.log
-*/obj
+**/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+!/src/bin/Debug/net5.0/appsettings.Production.json
 LICENSE
 README.md
