--- a/src/SportEvents.csproj
+++ b/src/SportEvents.csproj
@@ -24,5 +24,9 @@
   <ItemGroup>
     <Folder Include="../SportEvents.Test" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.Production.json" CopyToPublishDirectory="Always" />      
+  </ItemGroup>
   
 </Project>
